--- a/opensc-library-bmdswitcher/opensc-library-bmdswitcher.csproj
+++ b/opensc-library-bmdswitcher/opensc-library-bmdswitcher.csproj
@@ -20,9 +20,7 @@
       </COMReference>
   </ItemGroup>
   <ItemGroup>
-      <ProjectReference Include="..\ThreadHelpers\ThreadHelpers.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\ThreadHelpers\ThreadHelpers.csproj"/>
   </ItemGroup>
   <ItemGroup>
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
