--- a/opensc-macros-model/opensc-macros-model.csproj
+++ b/opensc-macros-model/opensc-macros-model.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
       <TargetFramework>net5.0</TargetFramework>
       <OutputType>Library</OutputType>
@@ -6,21 +6,19 @@
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+      <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
       <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Bespoke.Common" Version="1.0.0">
-      <Private>true</Private>
-    </PackageReference>
+      <PackageReference Include="Bespoke.Common" Version="1.0.0">
+         <Private>true</Private>
+      </PackageReference>
       <PackageReference Include="Bespoke.Osc" Version="1.0.0"/>
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj"/>
