--- a/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
+++ b/opensc-midicontrollers-bridge-macros/opensc-midicontrollers-bridge-macros.csproj
@@ -4,15 +4,9 @@
       <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-midicontrollers-model\opensc-midicontrollers-model.csproj"/>
+      <ProjectReference Include="..\opensc-macros-model\opensc-macros-model.csproj"/>
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
