--- a/opensc-routers-labelsets-bridge-dynamictexts/opensc-routers-labelsets-bridge-dynamictexts.csproj
+++ b/opensc-routers-labelsets-bridge-dynamictexts/opensc-routers-labelsets-bridge-dynamictexts.csproj
@@ -4,18 +4,10 @@
       <RootNamespace>opensc_routers_labelsets_bridge_dynamictexts</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-dynamictexts-model\opensc-dynamictexts-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-dynamictexts-model\opensc-dynamictexts-model.csproj"/>
+      <ProjectReference Include="..\opensc-labelsets-model\opensc-labelsets-model.csproj"/>
+      <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj"/>
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
