--- a/opensc-streams-subtype-youtube-gui/opensc-streams-subtype-youtube-gui.csproj
+++ b/opensc-streams-subtype-youtube-gui/opensc-streams-subtype-youtube-gui.csproj
@@ -9,21 +9,11 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-streams-gui\opensc-streams-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-streams-model\opensc-streams-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-streams-subtype-youtube-model\opensc-streams-subtype-youtube-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj"/>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-streams-gui\opensc-streams-gui.csproj"/>
+      <ProjectReference Include="..\opensc-streams-model\opensc-streams-model.csproj"/>
+      <ProjectReference Include="..\opensc-streams-subtype-youtube-model\opensc-streams-subtype-youtube-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
