--- a/opensc-umds-subtype-tsl31-model/opensc-umds-subtype-tsl31-model.csproj
+++ b/opensc-umds-subtype-tsl31-model/opensc-umds-subtype-tsl31-model.csproj
@@ -6,15 +6,9 @@
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-serialports-model\opensc-serialports-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-serialports-model\opensc-serialports-model.csproj"/>
+      <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
