--- a/opensc-umds-subtype-tsl50-gui/opensc-umds-subtype-tsl50-gui.csproj
+++ b/opensc-umds-subtype-tsl50-gui/opensc-umds-subtype-tsl50-gui.csproj
@@ -5,23 +5,15 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-umds-gui\opensc-umds-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-umds-subtype-tsl50-model\opensc-umds-subtype-tsl50-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj"/>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-umds-gui\opensc-umds-gui.csproj"/>
+      <ProjectReference Include="..\opensc-umds-subtype-tsl50-model\opensc-umds-subtype-tsl50-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
-      <Compile Update="GUI\UMDs\Tsl50ScreenEditorForm.cs" />
-      <Compile Update="GUI\UMDs\Tsl50ScreenList.cs" />
-      <Compile Update="GUI\UMDs\Tsl50DisplayUmdEditorForm.cs" />
+      <Compile Update="GUI\UMDs\Tsl50ScreenEditorForm.cs"/>
+      <Compile Update="GUI\UMDs\Tsl50ScreenList.cs"/>
+      <Compile Update="GUI\UMDs\Tsl50DisplayUmdEditorForm.cs"/>
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj" />
+  <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
