--- a/opensc-umds-subtype-tsl50-model/opensc-umds-subtype-tsl50-model.csproj
+++ b/opensc-umds-subtype-tsl50-model/opensc-umds-subtype-tsl50-model.csproj
@@ -4,12 +4,8 @@
       <RootNamespace>OpenSC</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj"/>
   </ItemGroup>
   <Import Project="..\GlobalCsproj\*.csproj"/>
 </Project>
