--- a/opensc-vtrs-subtype-casparcg-gui/opensc-vtrs-subtype-casparcg-gui.csproj
+++ b/opensc-vtrs-subtype-casparcg-gui/opensc-vtrs-subtype-casparcg-gui.csproj
@@ -9,21 +9,11 @@
       <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-vtrs-gui\opensc-vtrs-gui.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-vtrs-model\opensc-vtrs-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
-      <ProjectReference Include="..\opensc-vtrs-subtype-casparcg-model\opensc-vtrs-subtype-casparcg-model.csproj">
-         <Private>false</Private>
-      </ProjectReference>
+      <ProjectReference Include="..\opensc-core-gui\opensc-core-gui.csproj"/>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-vtrs-gui\opensc-vtrs-gui.csproj"/>
+      <ProjectReference Include="..\opensc-vtrs-model\opensc-vtrs-model.csproj"/>
+      <ProjectReference Include="..\opensc-vtrs-subtype-casparcg-model\opensc-vtrs-subtype-casparcg-model.csproj"/>
   </ItemGroup>
   <ItemGroup>
       <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
