Use task scheduler queue for serial ports

--- a/opensc-serialports-model/opensc-serialports-model.csproj
+++ b/opensc-serialports-model/opensc-serialports-model.csproj
@@ -6,12 +6,13 @@
       <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
-      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+      <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj" />
+      <ProjectReference Include="..\opensc-library-taskschedulerqueue\opensc-library-taskschedulerqueue.csproj" />
   </ItemGroup>
   <ItemGroup>
-      <PackageReference Include="Microsoft.CSharp" Version="4.7.0"/>
-      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0"/>
-      <PackageReference Include="System.IO.Ports" Version="5.0.1"/>
+      <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+      <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+      <PackageReference Include="System.IO.Ports" Version="5.0.1" />
   </ItemGroup>
-  <Import Project="..\GlobalCsproj\*.csproj"/>
+  <Import Project="..\GlobalCsproj\*.csproj" />
 </Project>
