--- a/CommonCsproj/ModelModuleBase.csproj
+++ b/CommonCsproj/ModelModuleBase.csproj
@@ -2,5 +2,6 @@
   <Import Project="Global\*.csproj"/>
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
+    <ProjectReference Include="..\opensc-core-model-sourcegenerators\opensc-core-model-sourcegenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="true" />
   </ItemGroup>
 </Project>
