--- a/opensc-routers-model/RoutersSubtypeModelModuleBase.csproj
+++ b/opensc-routers-model/RoutersSubtypeModelModuleBase.csproj
@@ -1,7 +1,6 @@
 <Project>
-  <Import Project="Global\*.csproj"/>
+  <Import Project="..\CommonCsproj\ModelModuleBase.csproj"/>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
     <ProjectReference Include="..\opensc-routers-model\opensc-routers-model.csproj"/>
     <ProjectReference Include="..\opensc-booleans-model\opensc-booleans-model.csproj" />
     <ProjectReference Include="..\opensc-signals-model\opensc-signals-model.csproj" />
