--- a/opensc-streams-model/StreamsSubtypeModelModuleBase.csproj
+++ b/opensc-streams-model/StreamsSubtypeModelModuleBase.csproj
@@ -1,5 +1,5 @@
 <Project>
-  <Import Project="Global\*.csproj"/>
+  <Import Project="..\CommonCsproj\ModelModuleBase.csproj"/>
   <ItemGroup>
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
     <ProjectReference Include="..\opensc-streams-model\opensc-streams-model.csproj"/>
