--- a/opensc-umds-model/UmdsSubtypeModelModuleBase.csproj
+++ b/opensc-umds-model/UmdsSubtypeModelModuleBase.csproj
@@ -1,7 +1,6 @@
 <Project>
-  <Import Project="Global\*.csproj"/>
+  <Import Project="..\CommonCsproj\ModelModuleBase.csproj"/>
   <ItemGroup>
-    <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj"/>
     <ProjectReference Include="..\opensc-umds-model\opensc-umds-model.csproj"/>
     <ProjectReference Include="..\opensc-booleans-model\opensc-booleans-model.csproj" />
     <ProjectReference Include="..\opensc-dynamictexts-model\opensc-dynamictexts-model.csproj" />
